Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2019

find out what is the problem of reporting OpenReadHead failed on vector inconsistency

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 4.2.0, 5.0.0
    • Cache
    • None

    Description

      [Jul 10 19:40:33.170] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 44B5C68B : vector inconsistency with 4624
      [Jul 10 19:40:33.293] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 2ABA746F : vector inconsistency with 4632
      [Jul 10 19:40:33.368] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 389594A0 : vector inconsistency with 4632
      [Jul 10 19:40:33.399] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey FBC601A3 : vector inconsistency with 4632
      [Jul 10 19:40:33.506] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 1F39AD5F : vector inconsistency with 4632
      [Jul 10 19:40:33.602] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey ABFC6D97 : vector inconsistency with 4632
      [Jul 10 19:40:33.687] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 2420ABBF : vector inconsistency with 4632
      [Jul 10 19:40:33.753] Server {0x2aaaaaaf1680} NOTE: OpenReadHead failed for cachekey 5DD061C8 : vector inconsistency with 4632
      

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              zym Zhao Yongming
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: