TS-2019 Fix the "vector inconsistency" errors.

(cherry picked from commit af3e7aa871740e85b0e610b3fd4c2dd741bfe52a)

Conflicts:
	CHANGES